--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/blee241/Employee-Tracker#readme",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "inquirer": "^8.2.4",
     "mysql2": "^3.3.3"
   }
